--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
     "webpack-cli": "^5.0.1"
   },
   "scripts": {
-    "webpack": "node_modules/.bin/webpack ",
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": ""
+    "webpack": "webpack --mode=development",
+    "babel": "babel src -d functions/src && babel index.js -d functions",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
