--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "webpack-cli": "^5.0.1"
   },
   "scripts": {
-    "webpack": "webpack --mode=development",
+    "webpack": "webpack --mode=production",
     "babel": "babel src -d functions/src && babel index.js -d functions",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
