--- a/firebase.json
+++ b/firebase.json
@@ -1,12 +1,20 @@
 {
-  "hosting": {
-    "public": "public",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
-    "rewrites": [
-      {
-        "source": "**",
-        "function": "ssrReact"
-      }
-    ]
-  }
+  "functions": [
+    {
+      "source": "functions",
+      "codebase": "default",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log"
+      ],
+      "rewrite": [
+        {
+          "source": "**",
+          "function": "ssrReact"
+        }
+      ]
+    }
+  ]
 }
