--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "webpack-cli": "^5.0.1"
   },
   "scripts": {
+    "dev": "react-scripts start",
     "webpack": "webpack --mode=production",
     "babel": "babel src -d functions/src && babel index.js -d functions",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -26,5 +27,17 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
